<resources>
    <string name="app_name">TriviaGo</string>
    <string name="register_while_loggedin">You are already logged in.</string>
    <string name="login_failed">Failed to login. Try again.</string>
    <string name="forum">Forum</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="register_failed">Could not register. Please try again.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="log_out">Log out</string>
    <string name="play_button">Play Button</string>
    <string name="already_registered">"Email is already registered. "</string>
    <string name="multiple_choice">Multiple Choice</string>
    <string name="true_false">True/False</string>
    <string name="any">Any</string>
    <string name="select_number_of_questions">Select number of questions</string>
    <string name="null_winrate">Win rate 0%</string>
    <string name="category_icon">Category Icon</string>
    <string name="rank_n_a">Rank N/A</string>
    <string name="username">Username</string>
    <string name="default_W_L">0W 0L</string>
    <string name="default_score">No scores yet!</string>
    <string name="default_WinRate">Win rate 0.00%</string>
    <string name="past_quizzes">Past Quizzes</string>
    <string name="progress">Progress</string>
    <string name="sign_in">Sign in</string>
    <string name="login_msg">to continue to Trivia Go!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="login_view_desc">Image view of Logo</string>
    <string name="play">Play!</string>
    <string name="question_type">Question Type</string>
    <string name="number_of_questions">Number of Questions</string>
    <string name="category">Category</string>
    <string name="difficulty">Difficulty</string>
    <string name="recommended_quizzes">Recommended Quizzes</string>
    <string name="true_boolean">True</string>
    <string name="false_boolean">False</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="question_1">Question 1</string>
    <string name="question_goes_here">Question goes here</string>
    <string name="default_score_results">Your Score: 0</string>
    <string name="default_points_results">Your Points: 0</string>
    <string name="quit">Quit</string>
    <string name="set_notification_time">Set Notification Time</string>
    <string name="enable_notif">Enable Daily Trivia Notifications</string>
    <string name="set_notif_time">Set Notification Time</string>
    <string name="default_time_text">08:00</string>
    <string name="account_settings_header">Account Settings</string>
    <string name="delete_data">Delete Data</string>
    <string name="delete_account">Delete Account</string>
    <string name="date">Date</string>
    <string name="score">Score</string>
    <string name="type">Type</string>
    <string name="quiz_desc_text">Quiz Description</string>
    <string name="quiz_title_header">Quiz Title</string>
    <string name="score_default_leaderboard">Score: 100</string>
    <string name="name_default_leaderboard">User Name</string>
    <string name="rank_default_leaderboard">0</string>
</resources>