<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:contentDescription="@string/home"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/leaderboard"
        android:title="@string/leaderboard"
        android:enabled="true"
        android:icon="@drawable/ic_leaderboard"
        android:contentDescription="@string/leaderboard"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom"/>

</menu>